# profiler

./: .gitignore  Cargo.toml  README.md
examples/: serialization_stress_test.rs  simple_chrome_tracing.rs  simple_serialization.rs
examples/embedded/: Cargo.toml
examples/embedded/src/: main.rs
examples/multithreading/: Cargo.toml  saved.profiling
examples/multithreading/src/: main.rs
examples/optional_profiling/: Cargo.toml  README.md  saved.profiling
examples/optional_profiling/src/: main.rs
examples/serialization_stress_test/: Cargo.toml
examples/serialization_stress_test/src/: main.rs
examples/simple_serialization/: Cargo.toml  saved.profiling
examples/simple_serialization/src/: main.rs
profiler-attributes/: Cargo.toml
profiler-attributes/src/: lib.rs
profiler-gui/: Cargo.toml
profiler-gui/src/: main.rs  processed_profiler.rs  viewer.rs
profiler_attributes/: Cargo.toml
profiler_attributes/src/: lib.rs
profiler_gui/: Cargo.toml
profiler_gui/src/: lib.rs  main.rs  processed_profiler.rs  utils.rs  viewer.rs
profiler_viewer/: Cargo.toml
profiler_viewer/src/: main.rs
src/: chrome_tracing.rs  function_name.rs  lib.rs  scope.rs  serialization.rs
tests/: function_name.rs  hello_world.rs  serialization.rs
