[package]
name = "profiler-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "profiler"
path = "src/lib.rs"

[workspace]
members = [
	"profiler-attributes",
	"profiler-gui",
]

[dependencies]
profiler-attributes = { path = "profiler-attributes" }
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.3"