[package]
name = "profiler"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
	"profiler_attributes",
	"profiler_gui",
	"examples/serialization_stress_test",
	"examples/simple_serialization",
	"examples/optional_profiling",
]

[features]
disable_profiling = ["profiler_attributes/disable_profiling"]

[dependencies]
profiler_attributes = { path = "profiler_attributes" }
serde = { version = "1.0.195", features = ["derive"] }
bincode = "1.3.3"
anyhow = "1.0"