[package]
name = "profiler"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
	"profiler_attributes",
	"profiler_gui",
	"profiler_viewer",
	"examples/serialization_stress_test",
	"examples/simple_serialization",
	"examples/multithreading",
	"examples/embedded",
	"examples/optional_profiling",
]

[features]
enable_profiling = ["profiler_attributes/enable_profiling"]
attribute = ["profiler_attributes"]

[dependencies]
profiler_attributes = { path = "profiler_attributes", optional = true }
serde = { version = "1.0.195", features = ["derive"] }
bincode = "1.3.3"
anyhow = "1.0"
once_cell = "1.19.0"

[dev-dependencies]
profiler_attributes = { path = "profiler_attributes" }